[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Level_1_Sprites/coinGold.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Level_1_Scripts/coin.gd" type="Script" id=2]
[ext_resource path="res://Audio/Level_1_Sounds/SoundForFinalGame/Collectible/CoinPickUp/SoundForCoin.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 11 )

[node name="Coin_Node" type="Node2D"]
script = ExtResource( 2 )

[node name="coin" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin"]
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="Area2D" type="Area2D" parent="coin"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin/Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="despawn" type="Timer" parent="."]
wait_time = 0.99
one_shot = true

[node name="coin_pickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[connection signal="body_entered" from="coin/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="despawn" to="." method="_on_despawn_timeout"]
